--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "zustand": "^5.0.8"
   },
   "scripts": {
-    "start": "serve -s build",
+    "start": "serve -s build -l $PORT",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
