--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,1 @@
-REACT_APP_SERVER_URL=https://teamsphere-server-production.up.railway.app/v1/
+REACT_APP_SERVER_URL=https://teamsphere-server-production.up.railway.app/
