--- a/railway.toml
+++ b/railway.toml
@@ -7,4 +7,4 @@ startCommand = "npm start"
 [env]
 NODE_ENV = "production"
 PORT = "3000"
-REACT_APP_SERVER_URL = "https://teamsphere-server-production.up.railway.app/v1/"
+REACT_APP_SERVER_URL = "https://teamsphere-server-production.up.railway.app/"
