--- a/railway.toml
+++ b/railway.toml
@@ -2,7 +2,7 @@
 command = "npm install && npm run build"
 
 [deploy]
-startCommand = "npm start"
+startCommand = "npm run dev"
 
 [env]
 NODE_ENV = "production"
